--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~font-awesome/css/font-awesome.css';
+
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
