--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,11 +1,17 @@
 <style>
-   .task-list{
+   .task-list {
       margin-top: 20px;
       display: grid;
       grid-gap: 20px;
    }
+
 </style>
 
 <div class="task-list">
-   <app-list-item *ngFor="let task of tasks" [task]="task" (completeTask)="completeTask($event)" (deleteTask)="deleteTask($event)"></app-list-item>
+   <app-task-form (addNewTask)="addNewTask($event)"></app-task-form>
+
+   <small>double click the task or toggle the box to mark the task as complete or incomplete</small>
+   <app-list-item *ngFor="let task of tasks.reverse()" [task]="task"
+      (toggleTaskCompletion)="toggleTaskCompletion($event)" (deleteTask)="deleteTask($event)">
+   </app-list-item>
 </div>
