--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -11,7 +11,7 @@
    <app-task-form (addNewTask)="addNewTask($event)"></app-task-form>
 
    <small>double click the task or toggle the box to mark the task as complete or incomplete</small>
-   <app-list-item *ngFor="let task of tasks.reverse()" [task]="task"
-      (toggleTaskCompletion)="toggleTaskCompletion($event)" (deleteTask)="deleteTask($event)">
+   <app-list-item *ngFor="let task of tasks" [task]="task" (toggleTaskCompletion)="toggleTaskCompletion($event)"
+      (deleteTask)="deleteTask($event)">
    </app-list-item>
 </div>
